Fix dependencies note

--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -39,7 +39,7 @@ $runtimes = $this->getParam('runtimes', []);
     <li>
         <h3>Node.js</h3>
         <div>
-        <div class="ide margin-top-small" data-lang="bash" data-lang-label="Bash">
+        <div class="ide margin-top-small" data-lang="javascript" data-lang-label="Javascript">
             <pre class="line-numbers"><code class="prism language-js" data-prism>const fetch = require("node-fetch");
 
 module.exports = async (request, response) => {
@@ -326,7 +326,7 @@ func main(req: RequestValue, res: RequestResponse) throws -> RequestResponse {
 }</code></pre>
         </div>
         <b>Installing Dependencies</b>
-        <p>Include a <b>pubspec.yaml</b> file with your function, Appwrite handles the rest! This example uses the <a href="https://pub.dev/packages/dio">Dio</a> package</p>
+        <p>Include a <b>Package.swift</b> file with your function, Appwrite handles the rest!</p>
         </div>
     </li>
 </ul>
