--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -22,7 +22,7 @@
         <h4>MacOS</h4>
         <p>Using <a href="https://brew.sh" target="_blank">Homebrew</a></p>
         <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
-            <pre class="line-numbers"><code class="prism language-bash" data-prism>$ brew tap appwrite/sdk-for-node-cli https://github.com/appwrite/sdk-for-node-cli
+            <pre class="line-numbers"><code class="prism language-bash" data-prism>$ brew tap appwrite/sdk-for-cli https://github.com/appwrite/sdk-for-cli
 $ brew update
 $ brew install --HEAD appwrite</code></pre>
         </div>
