Fixed create deployment command

--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -398,6 +398,7 @@ func main(req: RequestValue, res: RequestResponse) throws -> RequestResponse {
         <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
             <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite functions createDeployment \
     --functionId=6012cc93d5a7b \
+    --activate=true \
     --entrypoint="index.js" \
     --code="/myrepo/myfunction"</code></pre>
         </div>
@@ -408,6 +409,7 @@ func main(req: RequestValue, res: RequestResponse) throws -> RequestResponse {
         <div class="ide margin-bottom" data-lang="bash" data-lang-label="CMD">
             <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite functions createDeployment ^
     --functionId=6012cc93d5a7b ^
+    --activate=true ^
     --entrypoint="index.js" ^
     --code="/myrepo/myfunction"</code></pre>
         </div>
@@ -418,6 +420,7 @@ func main(req: RequestValue, res: RequestResponse) throws -> RequestResponse {
         <div class="ide margin-bottom" data-lang="bash" data-lang-label="PowerShell">
             <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite functions createDeployment ,
     --functionId=6012cc93d5a7b ,
+    --activate=true ,
     --entrypoint="index.js" ,
     --code="/myrepo/myfunction"</code></pre>
         </div>
