--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -333,9 +333,9 @@ appwrite client --debug // Prints your current configuration
     <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite client --endpoint http://192.168.1.6/v1 --projectId YOUR_PROJECT_ID --key YOUR_API_KEY</code></pre>
 </div>
 
-<p>When you set the global configuration parameters using the <b>client</b> service, they take precedence over the local configuration parameters in your <b>appwrite.json</b> thereby switching the CLI to the CI mode. </p> 
+<p>When you set the global configuration parameters using the <b>client</b> service, they take precedence over the local configuration parameters in your <b>appwrite.json</b> thereby switching the CLI to CI mode. </p> 
 
-<p>In this mode, the CLI can only interact with one project at a time. If you look closely, you'll also notice that we use an API Key to autenticate which means the CLI behaves like Appwrite's server SDK.</p>
+<p>In this mode, the CLI can only interact with one project at a time. If you look closely, you'll also notice that we use an <p>API Key</p> to autenticate which means the CLI behaves like Appwrite's server SDK. You can learn more about API Keys in the <a href="/docs/getting-started-for-server#apiKey">Getting Started for Server docs</a></p>
 </div>
 
 <h3><a href="/docs/command-line#help" id="help">Help</a></h3>
