feat: update android syntax

--- a/app/views/docs/storage.phtml
+++ b/app/views/docs/storage.phtml
@@ -122,8 +122,8 @@ void main() { // Init SDK
     </li>
     <li>
         <h3>Android</h3>
-        <div class="ide" data-lang="android" data-lang-label="Android SDK">
-            <pre class="line-numbers"><code class="prism language-android" data-prism>import androidx.appcompat.app.AppCompatActivity
+        <div class="ide" data-lang="kotlin" data-lang-label="Android SDK">
+            <pre class="line-numbers"><code class="prism language-kotlin" data-prism>import androidx.appcompat.app.AppCompatActivity
 import android.os.Bundle
 import kotlinx.coroutines.GlobalScope
 import kotlinx.coroutines.launch
