--- a/app/views/docs/getting-started-for-android.phtml
+++ b/app/views/docs/getting-started-for-android.phtml
@@ -52,7 +52,7 @@ $androidVersion = (isset($versions['android'])) ? $versions['android'] : '';
   <application ...>
     ...
     <!-- Add this inside the `<application>` tag, along side the existing `<activity>` tags -->
-    <activity android:name="io.appwrite.views.CallbackActivity" >
+    <activity android:name="io.appwrite.views.CallbackActivity" android:exported="true">
       <intent-filter android:label="android_web_auth">
         <action android:name="android.intent.action.VIEW" />
         <category android:name="android.intent.category.DEFAULT" />
