--- a/app/views/docs/storage.phtml
+++ b/app/views/docs/storage.phtml
@@ -158,24 +158,18 @@ class MainActivity : AppCompatActivity() {
         <div class="ide" data-lang="swift" data-lang-label="Apple SDK">
             <pre class="line-numbers"><code class="prism language-swift" data-prism>import Appwrite
 
-func main() {
+func main() async throws {
     let client = Client()
       .setEndpoint("https://[HOSTNAME_OR_IP]/v1") // Your API Endpoint
       .setProject("5df5acd0d48c2") // Your project ID
 
     let storage = Storage(client)
-    storage.createFile(
+    let file = try await storage.createFile(
         bucketId: "[BUCKET_ID]",
         fileId: "[FILE_ID]",
         file: File(name: "image.jpg", buffer: yourByteBuffer)
-    ) { result in
-        switch result {
-        case .failure(let error):
-            print(error.message)
-        case .success(let file):
-            print(String(describing: file)
-        }
-    }
+    )
+    print(file.toMap())
 }</code></pre>
         </div>
     </li>
