--- a/app/views/docs/installation.phtml
+++ b/app/views/docs/installation.phtml
@@ -80,7 +80,7 @@
                 DigitalOcean
             </td>
             <td>
-                <a href="https://marketplace.digitalocean.com/apps/appwrite" target="_blank" rel="noopener">Install</a>
+                <a href="https://marketplace.digitalocean.com/apps/appwrite" target="_blank" rel="noopener">Click to Install</a>
             </td>
         </tr>        
         <tr>
@@ -92,7 +92,7 @@
                 Gitpod
             </td>
             <td>
-                <a href="https://gitpod.io/#https://github.com/appwrite/integration-for-gitpod" target="_blank" rel="noopener">Install</a>
+                <a href="https://gitpod.io/#https://github.com/appwrite/integration-for-gitpod" target="_blank" rel="noopener">Click to Install</a>
             </td>
         </tr>
     </tbody>
